# glitchtip-telegram

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  release.yaml
src/: main.rs  templates.rs
