[package]
name = "glitchtip-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }

clap = { version = "4.5.60", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
